Fixed Header Btn & User first name style on mobile

--- a/src/components/Button/_Button.scss
+++ b/src/components/Button/_Button.scss
@@ -183,7 +183,6 @@ $iconExitDoors: url("/assets/icon-exit-doors.svg");
             margin-bottom: 2px;
 
             @media screen and (min-width:768px) {
-                margin-bottom: 5px;
                 margin-right: 7px;
             }
         }
