--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -425,7 +425,6 @@ div:focus-visible {
 }
 @media screen and (min-width: 768px) {
   .btn--logout::before {
-    margin-bottom: 5px;
     margin-right: 7px;
   }
 }
@@ -1198,17 +1197,17 @@ div:focus-visible {
   color: var(--primary-gray-font-color);
 }
 .header__nav-user {
-  display: none;
+  display: inline;
+  font-family: "Circe", sans-serif;
+  font-size: 18px;
+  margin: 0;
+  line-height: 27px;
+  padding-right: 5px;
+  border-right: 1px solid var(--primary-gray-font-color);
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .header__nav-user {
-    display: inline;
-    font-family: "Circe", sans-serif;
-    font-size: 18px;
-    margin: 0;
-    line-height: 27px;
     padding-right: 15px;
-    border-right: 1px solid var(--primary-gray-font-color);
   }
 }
 
